--- a/warranty.css
+++ b/warranty.css
@@ -142,17 +142,18 @@
   width: 122px;
   position: absolute;
 }
-.warranty-text1 {
+.warranty-navlink5 {
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
+  text-decoration: none;
 }
 .warranty-file-validation-signatures {
   top: 94px;
   left: 33px;
   position: absolute;
 }
-.warranty-navlink5 {
+.warranty-navlink6 {
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
@@ -305,7 +306,7 @@
   border-radius: 12px;
   background-color: #615a9b;
 }
-.warranty-text2 {
+.warranty-text1 {
   top: 7px;
   left: 59px;
   color: #ffffff;
@@ -331,7 +332,7 @@
   height: 15px;
   position: absolute;
 }
-.warranty-text3 {
+.warranty-text2 {
   top: 7px;
   left: 28px;
   margin: auto;
