--- a/g-p-s.css
+++ b/g-p-s.css
@@ -131,10 +131,11 @@
   width: 122px;
   position: absolute;
 }
-.g-p-s-text {
+.g-p-s-navlink5 {
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
+  text-decoration: none;
 }
 .g-p-s-miscellaneous5 {
   top: 374px;
@@ -142,7 +143,7 @@
   width: 122px;
   position: absolute;
 }
-.g-p-s-text1 {
+.g-p-s-text {
   font-size: 14px;
   font-style: normal;
   font-weight: 500;
@@ -152,7 +153,7 @@
   left: 33px;
   position: absolute;
 }
-.g-p-s-navlink5 {
+.g-p-s-navlink6 {
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
@@ -377,7 +378,7 @@
   border-radius: 12px;
   background-color: #615a9b;
 }
-.g-p-s-text3 {
+.g-p-s-text2 {
   top: 7px;
   left: 59px;
   color: #ffffff;
@@ -403,7 +404,7 @@
   height: 15px;
   position: absolute;
 }
-.g-p-s-text4 {
+.g-p-s-text3 {
   top: 7px;
   left: 28px;
   margin: auto;
@@ -487,56 +488,66 @@
   position: absolute;
 }
 .g-p-s-radiobutton03 {
-  top: 631px;
+  top: 634px;
   left: 444px;
   position: absolute;
 }
 .g-p-s-radiobutton04 {
-  top: 527px;
+  top: 634px;
   left: 821px;
   position: absolute;
 }
 .g-p-s-radiobutton05 {
   top: 527px;
-  right: 225px;
+  left: 821px;
   position: absolute;
 }
 .g-p-s-radiobutton06 {
+  top: 527px;
+  right: 225px;
+  position: absolute;
+}
+.g-p-s-radiobutton07 {
   top: 223px;
   left: 444px;
   position: absolute;
 }
-.g-p-s-radiobutton07 {
+.g-p-s-radiobutton08 {
   top: 375px;
   left: 1135px;
   position: absolute;
 }
-.g-p-s-radiobutton08 {
+.g-p-s-radiobutton09 {
   top: 375px;
   left: 754px;
   position: absolute;
 }
-.g-p-s-radiobutton09 {
-  top: 527px;
-  left: 377px;
-  position: absolute;
-}
 .g-p-s-radiobutton10 {
-  top: 631px;
+  top: 527px;
   left: 377px;
   position: absolute;
 }
 .g-p-s-radiobutton11 {
+  top: 634px;
+  left: 377px;
+  position: absolute;
+}
+.g-p-s-radiobutton12 {
+  top: 634px;
+  left: 754px;
+  position: absolute;
+}
+.g-p-s-radiobutton13 {
   top: 527px;
   left: 754px;
   position: absolute;
 }
-.g-p-s-radiobutton12 {
+.g-p-s-radiobutton14 {
   top: 527px;
   left: 1135px;
   position: absolute;
 }
-.g-p-s-radiobutton13 {
+.g-p-s-radiobutton15 {
   top: 223px;
   left: 377px;
   position: absolute;
@@ -566,7 +577,7 @@
   font-weight: 200;
 }
 .g-p-s-is-there-a-cobuyer03 {
-  top: 629px;
+  top: 632px;
   left: 342px;
   color: #000000;
   position: absolute;
@@ -574,7 +585,7 @@
   font-weight: 200;
 }
 .g-p-s-is-there-a-cobuyer04 {
-  top: 525px;
+  top: 632px;
   left: 719px;
   color: #000000;
   position: absolute;
@@ -583,13 +594,21 @@
 }
 .g-p-s-is-there-a-cobuyer05 {
   top: 525px;
-  left: 1100px;
+  left: 719px;
   color: #000000;
   position: absolute;
   font-size: 14px;
   font-weight: 200;
 }
 .g-p-s-is-there-a-cobuyer06 {
+  top: 525px;
+  left: 1100px;
+  color: #000000;
+  position: absolute;
+  font-size: 14px;
+  font-weight: 200;
+}
+.g-p-s-is-there-a-cobuyer07 {
   top: 221px;
   left: 342px;
   color: #000000;
@@ -597,7 +616,7 @@
   font-size: 14px;
   font-weight: 200;
 }
-.g-p-s-is-there-a-cobuyer07 {
+.g-p-s-is-there-a-cobuyer08 {
   top: 373px;
   left: 1171px;
   color: #000000;
@@ -605,7 +624,7 @@
   font-size: 14px;
   font-weight: 200;
 }
-.g-p-s-is-there-a-cobuyer08 {
+.g-p-s-is-there-a-cobuyer09 {
   top: 373px;
   left: 790px;
   color: #000000;
@@ -613,16 +632,8 @@
   font-size: 14px;
   font-weight: 200;
 }
-.g-p-s-is-there-a-cobuyer09 {
-  top: 525px;
-  left: 413px;
-  color: #000000;
-  position: absolute;
-  font-size: 14px;
-  font-weight: 200;
-}
 .g-p-s-is-there-a-cobuyer10 {
-  top: 629px;
+  top: 525px;
   left: 413px;
   color: #000000;
   position: absolute;
@@ -630,6 +641,22 @@
   font-weight: 200;
 }
 .g-p-s-is-there-a-cobuyer11 {
+  top: 632px;
+  left: 413px;
+  color: #000000;
+  position: absolute;
+  font-size: 14px;
+  font-weight: 200;
+}
+.g-p-s-is-there-a-cobuyer12 {
+  top: 632px;
+  left: 790px;
+  color: #000000;
+  position: absolute;
+  font-size: 14px;
+  font-weight: 200;
+}
+.g-p-s-is-there-a-cobuyer13 {
   top: 525px;
   left: 790px;
   color: #000000;
@@ -637,7 +664,7 @@
   font-size: 14px;
   font-weight: 200;
 }
-.g-p-s-is-there-a-cobuyer12 {
+.g-p-s-is-there-a-cobuyer14 {
   top: 525px;
   left: 1171px;
   color: #000000;
@@ -645,7 +672,7 @@
   font-size: 14px;
   font-weight: 200;
 }
-.g-p-s-is-there-a-cobuyer13 {
+.g-p-s-is-there-a-cobuyer15 {
   top: 221px;
   left: 413px;
   color: #000000;
