--- a/index.css
+++ b/index.css
@@ -3,12 +3,37 @@
   display: flex;
   overflow: auto;
   min-height: 100vh;
-  align-items: center;
   flex-direction: column;
-  justify-content: center;
 }
-.index-navlink {
-  top: 474px;
-  left: 544px;
+.index-save {
+  top: 506px;
+  left: 0px;
+  right: 0px;
+  width: 151px;
+  height: 30px;
+  margin: auto;
+  position: absolute;
+  border-color: #615a9b;
+  border-radius: 12px;
   text-decoration: none;
+  background-color: #615a9b;
+}
+.index-text {
+  top: 7px;
+  left: 42px;
+  color: #ffffff;
+  margin: auto;
+  position: absolute;
+  font-size: 12px;
+  text-align: left;
+}
+.index-image {
+  top: 307px;
+  left: 0px;
+  right: 0px;
+  width: 360px;
+  height: 99px;
+  margin: auto;
+  position: absolute;
+  object-fit: cover;
 }
