--- a/warranty.css
+++ b/warranty.css
@@ -39,12 +39,16 @@
   height: 26px;
   position: absolute;
 }
+.warranty-navlink {
+  display: contents;
+}
 .warranty-logo {
   top: 10px;
   left: 32px;
   width: 100px;
   position: absolute;
   object-fit: cover;
+  text-decoration: none;
 }
 .warranty-side-nav-bar {
   top: 48px;
@@ -71,7 +75,7 @@
   left: 32px;
   position: absolute;
 }
-.warranty-navlink {
+.warranty-navlink1 {
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
@@ -83,7 +87,7 @@
   width: 138px;
   position: absolute;
 }
-.warranty-navlink1 {
+.warranty-navlink2 {
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
@@ -106,7 +110,7 @@
   width: 122px;
   position: absolute;
 }
-.warranty-navlink2 {
+.warranty-navlink3 {
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
@@ -118,7 +122,7 @@
   width: 122px;
   position: absolute;
 }
-.warranty-navlink3 {
+.warranty-navlink4 {
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
@@ -130,7 +134,7 @@
   width: 122px;
   position: absolute;
 }
-.warranty-navlink4 {
+.warranty-navlink5 {
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
@@ -142,7 +146,7 @@
   width: 122px;
   position: absolute;
 }
-.warranty-navlink5 {
+.warranty-navlink6 {
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
@@ -153,7 +157,7 @@
   left: 33px;
   position: absolute;
 }
-.warranty-navlink6 {
+.warranty-navlink7 {
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
@@ -431,4 +435,28 @@
   position: absolute;
   font-size: 14px;
   font-weight: 200;
+}
+.warranty-last {
+  top: 930px;
+  left: 1150px;
+  width: 90px;
+  height: 30px;
+  border-color: #615a9b;
+  border-radius: 12px;
+  text-decoration: none;
+}
+.warranty-text3 {
+  top: 7px;
+  left: 33px;
+  margin: auto;
+  position: absolute;
+  font-size: 12px;
+  text-align: left;
+}
+.warranty-left-arrow {
+  top: 7px;
+  left: 10px;
+  width: 15px;
+  height: 15px;
+  position: absolute;
 }
