--- a/g-p-s.css
+++ b/g-p-s.css
@@ -39,12 +39,16 @@
   height: 26px;
   position: absolute;
 }
+.g-p-s-navlink {
+  display: contents;
+}
 .g-p-s-logo {
   top: 10px;
   left: 32px;
   width: 100px;
   position: absolute;
   object-fit: cover;
+  text-decoration: none;
 }
 .g-p-s-side-nav-bar {
   top: 48px;
@@ -71,7 +75,7 @@
   left: 32px;
   position: absolute;
 }
-.g-p-s-navlink {
+.g-p-s-navlink1 {
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
@@ -83,7 +87,7 @@
   width: 138px;
   position: absolute;
 }
-.g-p-s-navlink1 {
+.g-p-s-navlink2 {
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
@@ -95,7 +99,7 @@
   width: 122px;
   position: absolute;
 }
-.g-p-s-navlink2 {
+.g-p-s-navlink3 {
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
@@ -107,7 +111,7 @@
   width: 122px;
   position: absolute;
 }
-.g-p-s-navlink3 {
+.g-p-s-navlink4 {
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
@@ -119,7 +123,7 @@
   width: 144px;
   position: absolute;
 }
-.g-p-s-navlink4 {
+.g-p-s-navlink5 {
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
@@ -131,7 +135,7 @@
   width: 122px;
   position: absolute;
 }
-.g-p-s-navlink5 {
+.g-p-s-navlink6 {
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
@@ -153,7 +157,7 @@
   left: 33px;
   position: absolute;
 }
-.g-p-s-navlink6 {
+.g-p-s-navlink7 {
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
@@ -406,7 +410,9 @@
   position: absolute;
   font-size: 12px;
   border-color: #615a9b;
+  border-width: 0px;
   border-radius: 10px;
+  background-color: #e2e2e2;
 }
 .g-p-s-textinput2 {
   top: 268px;
@@ -436,7 +442,9 @@
   position: absolute;
   font-size: 12px;
   border-color: #615a9b;
+  border-width: 0px;
   border-radius: 10px;
+  background-color: #e2e2e2;
 }
 .g-p-s-textinput5 {
   top: 223px;
@@ -446,7 +454,9 @@
   position: absolute;
   font-size: 12px;
   border-color: #615a9b;
+  border-width: 0px;
   border-radius: 10px;
+  background-color: #e2e2e2;
 }
 .g-p-s-radiobutton {
   top: 375px;
@@ -655,4 +665,28 @@
   position: absolute;
   font-size: 14px;
   font-weight: 200;
+}
+.g-p-s-last {
+  top: 930px;
+  left: 1150px;
+  width: 90px;
+  height: 30px;
+  border-color: #615a9b;
+  border-radius: 12px;
+  text-decoration: none;
+}
+.g-p-s-text3 {
+  top: 7px;
+  left: 33px;
+  margin: auto;
+  position: absolute;
+  font-size: 12px;
+  text-align: left;
+}
+.g-p-s-left-arrow {
+  top: 7px;
+  left: 10px;
+  width: 15px;
+  height: 15px;
+  position: absolute;
 }
