--- a/service-contract.css
+++ b/service-contract.css
@@ -39,12 +39,16 @@
   height: 26px;
   position: absolute;
 }
+.service-contract-navlink {
+  display: contents;
+}
 .service-contract-logo {
   top: 10px;
   left: 32px;
   width: 100px;
   position: absolute;
   object-fit: cover;
+  text-decoration: none;
 }
 .service-contract-side-nav-bar {
   top: 48px;
@@ -71,7 +75,7 @@
   left: 32px;
   position: absolute;
 }
-.service-contract-navlink {
+.service-contract-navlink1 {
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
@@ -83,7 +87,7 @@
   width: 138px;
   position: absolute;
 }
-.service-contract-navlink1 {
+.service-contract-navlink2 {
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
@@ -95,7 +99,7 @@
   width: 122px;
   position: absolute;
 }
-.service-contract-navlink2 {
+.service-contract-navlink3 {
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
@@ -107,7 +111,7 @@
   width: 122px;
   position: absolute;
 }
-.service-contract-navlink3 {
+.service-contract-navlink4 {
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
@@ -130,7 +134,7 @@
   width: 122px;
   position: absolute;
 }
-.service-contract-navlink4 {
+.service-contract-navlink5 {
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
@@ -142,7 +146,7 @@
   width: 122px;
   position: absolute;
 }
-.service-contract-navlink5 {
+.service-contract-navlink6 {
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
@@ -153,7 +157,7 @@
   left: 33px;
   position: absolute;
 }
-.service-contract-navlink6 {
+.service-contract-navlink7 {
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
@@ -414,7 +418,9 @@
   position: absolute;
   font-size: 12px;
   border-color: #615a9b;
+  border-width: 0px;
   border-radius: 10px;
+  background-color: #e2e2e2;
 }
 .service-contract-textinput02 {
   top: 375px;
@@ -424,7 +430,9 @@
   position: absolute;
   font-size: 12px;
   border-color: #615a9b;
+  border-width: 0px;
   border-radius: 10px;
+  background-color: #e2e2e2;
 }
 .service-contract-textinput03 {
   top: 420px;
@@ -494,7 +502,9 @@
   position: absolute;
   font-size: 12px;
   border-color: #615a9b;
+  border-width: 0px;
   border-radius: 10px;
+  background-color: #e2e2e2;
 }
 .service-contract-textinput10 {
   top: 268px;
@@ -534,7 +544,9 @@
   position: absolute;
   font-size: 12px;
   border-color: #615a9b;
+  border-width: 0px;
   border-radius: 10px;
+  background-color: #e2e2e2;
 }
 .service-contract-textinput14 {
   top: 223px;
@@ -544,7 +556,9 @@
   position: absolute;
   font-size: 12px;
   border-color: #615a9b;
+  border-width: 0px;
   border-radius: 10px;
+  background-color: #e2e2e2;
 }
 .service-contract-textinput15 {
   top: 223px;
@@ -554,7 +568,9 @@
   position: absolute;
   font-size: 12px;
   border-color: #615a9b;
+  border-width: 0px;
   border-radius: 10px;
+  background-color: #e2e2e2;
 }
 .service-contract-radiobutton {
   top: 375px;
@@ -581,4 +597,28 @@
   position: absolute;
   font-size: 14px;
   font-weight: 200;
+}
+.service-contract-last {
+  top: 930px;
+  left: 1150px;
+  width: 90px;
+  height: 30px;
+  border-color: #615a9b;
+  border-radius: 12px;
+  text-decoration: none;
+}
+.service-contract-text4 {
+  top: 7px;
+  left: 33px;
+  margin: auto;
+  position: absolute;
+  font-size: 12px;
+  text-align: left;
+}
+.service-contract-left-arrow {
+  top: 7px;
+  left: 10px;
+  width: 15px;
+  height: 15px;
+  position: absolute;
 }
